--- a/style.css
+++ b/style.css
@@ -12,13 +12,19 @@ body {
 }
 
 .container {
-    position: absolute;
+    position:absolute;
     top: 200px;
     left: 20vw;
     transform: translate(-50%, -50%);
     animation: flutuacao 10s ease-in-out infinite;
-    background-color: rgb(16, 70, 219);
+    background-color: darkblue;
     border-radius: 50%;
+    width: 300px;
+    height: 300px;
+}
+
+img {
+    margin-top: -30px;
 }
 
 @keyframes flutuacao {
@@ -29,6 +35,6 @@ body {
     }
 
     50% {
-        transform: translateY(-120px);
+        transform: translateY(-100px);
     }
 }
