--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+/* Corpo da página */
+
 body {
     background-color: rgb(255, 255, 255);
     width: 100%;
@@ -11,10 +13,11 @@ body {
     position: relative;
 }
 
+/* Imagem flutuante */
 .container {
     position:absolute;
     top: 200px;
-    left: 20vw;
+    left: 10vw;
     transform: translate(-50%, -50%);
     animation: flutuacao 10s ease-in-out infinite;
     background-color: darkblue;
@@ -38,3 +41,46 @@ img {
         transform: translateY(-100px);
     }
 }
+
+/* Barra de nav */
+
+#icons{
+    float: left;
+    margin-left: 120px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    display: inline-block;
+    color: rgb(12, 11, 11);
+    text-decoration: none;
+    padding: 14px 16px;
+}
+
+#menu li > a:hover {
+    color:white;
+    background-color: black;
+}
+
+/* Animação para colocar barra emm baixo dos icones
+h1:after {
+    content: "";
+    background-image: linear-gradient(120deg, #e5ea15, #00c4ff);
+    width: 90%;
+    height: 5px;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%) skew(-50deg);
+} */
+
