--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     top: 200px;
     left: 10vw;
     transform: translate(-50%, -50%);
-    animation: flutuacao 10s ease-in-out infinite;
+    animation: flutuacao 8s ease-in-out infinite;
     background-color: darkblue;
     border-radius: 50%;
     width: 300px;
@@ -38,7 +38,7 @@ img {
     }
 
     50% {
-        transform: translateY(-100px);
+        transform: translateY(-80px);
     }
 }
 
@@ -47,6 +47,7 @@ img {
 #icons{
     float: left;
     margin-left: 120px;
+    padding-top: 20px;
 }
 
 ul {
@@ -71,16 +72,3 @@ li a {
     color:white;
     background-color: black;
 }
-
-/* Animação para colocar barra emm baixo dos icones
-h1:after {
-    content: "";
-    background-image: linear-gradient(120deg, #e5ea15, #00c4ff);
-    width: 90%;
-    height: 5px;
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%) skew(-50deg);
-} */
-
